--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -3,18 +3,23 @@
   width: 5rem;
   border-radius: 75%;
 }
-
 .box {
   box-shadow: 2px 2px 7px -1px rgba(0, 0, 0, 0.2);
   transition: all 0.4s ease;
   border-radius: 0.4rem;
 }
-
 .box:hover {
   transform: scale(1.04);
   box-shadow: 7px 7px 7px -1px rgba(0, 0, 0, 0.2);
 }
-
 .details {
   color: #0288d1;
+}
+.project-image {
+  height: 12rem;
+  object-fit: cover;
+}
+.project-description {
+  height: 5.5rem;
+  object-fit: cover;
 }
