--- a/src/pages/details.module.css
+++ b/src/pages/details.module.css
@@ -1,7 +1,7 @@
 .container {
   display: grid;
   grid-template-columns: 33.3% 33.3% 33.3%;
-  grid-template-rows: auto;
+  grid-template-rows: 27rem;
   row-gap: 1rem;
   column-gap: 1rem;
   grid-template-areas:
