--- a/src/components/ProjectCard.module.css
+++ b/src/components/ProjectCard.module.css
@@ -2,6 +2,7 @@
   height: 5rem;
   width: 5rem;
   border-radius: 75%;
+  object-fit: cover;
 }
 .box {
   box-shadow: 2px 2px 7px -1px rgba(0, 0, 0, 0.2);
