Add table of issues

--- a/src/components/Table/Table.module.css
+++ b/src/components/Table/Table.module.css
@@ -1,8 +1,19 @@
 .table {
-  background: red;
-  color: white;
+  width: 100%;
+  background: #fff;
+  color: #000;
   border-radius: 5px;
+  text-transform: capitalize;
+  font-size: 16px;
+  margin-bottom: 1rem;
 }
 .th {
-  padding: 10px;
+  padding: 1.15rem;
+  white-space: nowrap;
+}
+.first-col {
+  color: #7740d9;
+}
+.row {
+  border-bottom: 1px solid #3a4250;
 }
